<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:title="@string/home"-->
<!--            android:iconTint="@android:color/white"/>-->

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/orders"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/category"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            android:iconTint="@android:color/white"/>
    </group>

</menu>