<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/other_pname"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:text="@string/product_quantity"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_price"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_below="@id/cart_product_quantity"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>